--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Maps/FileTest.FileTest
+EditorStartupMap=/Game/Maps/FileTest.FileTest
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -60,9 +61,9 @@ FontDPI=72
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/MyUtility")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
-bEnablePlugin=True
+bEnablePlugin=False
 bAllowNetworkConnection=True
-SecurityToken=D38A5F8D46D3A52724F5B6A5E633A96E
+SecurityToken=
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
